Fix navbar/title z-index

--- a/src/styles/components/_main-page.scss
+++ b/src/styles/components/_main-page.scss
@@ -32,6 +32,7 @@
     font-size: 2rem;
     justify-self: center;
     margin: 0;
+    z-index: 5;
 
     span {
         color: lighten($accent, 10%);
